[package]
name = "RustMud"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = {path = "../utils"}
tokio = { version = "1.38.0", features = ["full"] }
chrono = {version = "0.4.38"}
crossbeam = "0.8.4"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
lazy_static = "1.4.0"
pathfinding = "4.10.0"