[package]
name = "RustMud"
version = "0.2.0"
edition = "2021"

[dependencies]
utils = {path = "../utils"}
tokio = { version = "1.38.0", features = ["full"] }
chrono = {version = "0.4.38"}
crossbeam = "0.8.4"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
lazy_static = "1.4.0"
once_cell = "1.15"
pathfinding = "4.10.0"
walkdir = "2.5.0"
clap = { version = "4.5.9", features = ["derive"] }

